--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,9 @@
 <h1> Hello from EJS </h1>
+
+<%=myName %>
+<p>Enter your name!</p>
+<form method="get" action="/name">
+    <input type="text" name="ejsFormName" value="<%=myName %>">
+
+    <intput type="submit">
+</form>
